Fixed textarea clipping

--- a/styles.css
+++ b/styles.css
@@ -74,12 +74,17 @@ div#initial-guess > input{
     margin: 2px;
 }
 
-textarea {
+textarea.no-header {
     width: 99%;
     height: 95%;
     resize: none;
 }
 
+textarea.with-header {
+    width: 99%;
+    height: 90%;
+    resize: none;
+}
 
 /* Disabling the arrows in input */
 /* Chrome, Safari, Edge, Opera */
